# Aeonmi-Quantum-Workflow

./: .gitignore  .lighthouserc.json  ADVANCED_WORKFLOW_TYPES.md  AUTHENTICATION_IMPLEMENTATION.md  App.tsx  BACKEND_INTEGRATION.md  BB84_INTEGRATION.md  BUILD_README.md  BUILD_VALIDATION_README.md  DEPENDENCY_UPDATES.md  DEPLOYMENT.md  DEPLOYMENT_PACKAGE_README.md  INTEGRATION_SUCCESS.md  LICENSE  MICRO_AI_IMPLEMENTATION.md  PRODUCTION_DEPLOYMENT.md  QUANTUMFORGE_ULTIMATE_PLATFORM.md  QUANTUM_HARDWARE_SETUP.md  README.md  aeonmi_runtime.py  automation_platforms_catalog.md  build.bat  build.ps1  config.qube  create-deployment-package.ps1  create-deployment-package.sh  docker-compose.yml  main.aeonmi  metro.config.js  package-lock.json  tsconfig.json  validate-build.ps1  validate-build.sh
.github/: copilot-instructions.md
Aeonmi-Quantum-Workflow-v1.0.0/: README.md  app.json  install.sh  package.json
app/: .env.example  .eslintrc.js  .gitignore  App.tsx  Dockerfile  README.md  babel.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
archived/frontend/src-tauri/: Cargo.toml  tauri.conf.json
archived/frontend/src-tauri/icons/: icon.icns
archived/frontend/src-tauri/src/: bb84.rs  main.rs
assets/: logo_design.md
backend/: .env.example  .gitignore  Dockerfile  app.py  auth.py  quantum_config.py  requirements.txt  test_api.py  test_auth.py  test_csrf_integration.py
browser-extension/: background.js  manifest.json  popup.html  popup.js  styles.css
core/: engine.aeonmi  handlers.aeonmi  (+3 more)
(+179 files in other folders)
